attached_assets/Pasted-2025-06-30T00-45-54Z-info-Deployment-b4a184a5-7af8-4660-888f-b3c4b8119140-2025-06-30T00-45-54Z-inf-1751244540487_1751244540488.txt
2025-06-30T00:45:54Z info: Deployment: b4a184a5-7af8-4660-888f-b3c4b8119140
2025-06-30T00:45:54Z info: Build: 95874a6f-e525-462b-a430-4eab60031187
2025-06-30T00:45:54Z info: Connecting to builder
2025-06-30T00:45:55Z info: Builder connected
2025-06-30T00:45:56Z info: Installing packages
--> npm install


up to date, audited 705 packages in 5s

86 packages are looking for funding
  run `npm fund` for details


9 vulnerabilities (1 low, 8 moderate)

To address issues that do not require attention, run:
  npm audit fix

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.

npm notice
npm notice New major version of npm available! 10.8.2 -> 11.4.2
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.4.2
npm notice To update run: npm install -g npm@11.4.2
npm notice

2025-06-30T00:46:02Z info: Starting Build

> rest-express@1.0.0 build
> npm run build:frontend && npm run build:server



> rest-express@1.0.0 build:frontend
> vite build


vite v5.4.19 building for production...

transforming...

Browserslist: browsers data (caniuse-lite) is 8 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme

✓ 2415 modules transformed.

rendering chunks...

computing gzip size...

../dist/public/index.html                   1.13 kB │ gzip:   0.60 kB

✓ built in 10.25s


> rest-express@1.0.0 build:server
> npx tsc -p server/tsconfig.production.json || echo 'TypeScript compilation skipped'


server/email-service.ts(32,7): error TS2322: Type 'string | undefined' is not assignable to type 'string'.
  Type 'undefined' is not assignable to type 'string'.

server/instant-job-delivery.ts(118,24): error TS7006: Parameter 'js' implicitly has an 'any' type.
server/instant-job-delivery.ts(221,56): error TS18046: 'error' is of type 'unknown'.
server/job-aggregator.ts(72,51): error TS18046: 'error' is of type 'unknown'.

server/resume-parser.ts(60,28): error TS2304: Cannot find name 'pdfParse'.

server/routes.ts(2409,38): error TS7006: Parameter 'variation' implicitly has an 'any' type.
server/routes.ts(2515,33): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ 'san francisco': string[]; seattle: string[]; 'new york': string[]; 'los angeles': string[]; chicago: string[]; austin: string[]; boston: string[]; denver: string[]; }'.
  No index signature with a parameter of type 'string' was found on type '{ 'san francisco': string[]; seattle: string[]; 'new york': string[]; 'los angeles': string[]; chicago: string[]; austin: string[]; boston: string[]; denver: string[]; }'.
server/routes.ts(2517,39): error TS7006: Parameter 'area' implicitly has an 'any' type.
server/services/index.ts(10,10): error TS2614: Module '"*"' has no exported member 'MatchingService'. Did you mean to use 'import MatchingService from "*"' instead?
server/services/index.ts(12,10): error TS2614: Module '"*"' has no exported member 'CandidateService'. Did you mean to use 'import CandidateService from "*"' instead?
server/services/index.ts(13,10): error TS2614: Module '"*"' has no exported member 'NotificationService'. Did you mean to use 'import NotificationService from "*"' instead?
server/services/index.ts(14,10): error TS2614: Module '"*"' has no exported member 'ApplicationService'. Did you mean to use 'import ApplicationService from "*"' instead?
server/services/index.ts(15,10): error TS2614: Module '"*"' has no exported member 'ChatService'. Did you mean to use 'import ChatService from "*"' instead?
server/services/index.ts(18,10): error TS2614: Module '"*"' has no exported member 'JobAggregatorService'. Did you mean to use 'import JobAggregatorService from "*"' instead?
server/services/index.ts(19,10): error TS2614: Module '"*"' has no exported member 'ResumeParserService'. Did you mean to use 'import ResumeParserService from "*"' instead?

vite.config.ts(1,10): error TS2305: Module '"vite"' has no exported member 'defineConfig'.

TypeScript compilation skipped

2025-06-30T00:46:26Z info: Pushing pid1 binary layer...
2025-06-30T00:46:26Z info: Pushing hosting layer...
2025-06-30T00:46:26Z info: Pushing Repl layer...
2025-06-30T00:46:27Z info: Retrieved cached nix layer
2025-06-30T00:46:27Z info: Created pid1 binary layer
2025-06-30T00:46:27Z info: Created hosting layer
2025-06-30T00:46:49Z info: Created Repl layer
2025-06-30T00:46:49Z info: Pushed image manifest
2025-06-30T00:46:49Z info: Pushed soci index manifest
2025-06-30T00:46:53Z info: Creating Autoscale service
error proxying request error=dial tcp 127.0.0.1:5000: connect: connection refused
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
SyntaxError: Cannot use import statement outside a module
^^^^^^
    at Module._load (node:internal/modules/cjs/loader:1104:12)
error proxying request error=dial tcp 127.0.0.1:5000: connect: connection refused
Node.js v20.18.1
^^^^^^
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
crash loop detected
error proxying request error=dial tcp 127.0.0.1:5000: connect: connection refused
error proxying request error=dial tcp 127.0.0.1:5000: connect: connection refused
2025-06-30T00:48:08Z error: The deployment is crash looping. This can happen if the run command fails or exits immediately after starting. Check the logs for more information.
